<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/applianceName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/power_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/applianceName_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/location_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/appliance_location"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/applianceName_tv"
            app:layout_constraintTop_toBottomOf="@+id/applianceName_tv" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/location_view"
            app:layout_constraintEnd_toEndOf="@+id/power_switch" />

        <TextView
            android:id="@+id/avg_power_expense_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AvgPowerExp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/location_view"
            app:layout_constraintTop_toBottomOf="@+id/location_view" />

        <TextView
            android:id="@+id/powerExpense_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:gravity="end"
            android:text="@string/textview"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/avg_power_expense_view"
            app:layout_constraintEnd_toStartOf="@+id/textView" />

<!--        <com.google.android.material.switchmaterial.SwitchMaterial-->
<!--            android:id="@+id/power_switch"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:clickable="false"-->
<!--            android:text=""-->
<!--            app:layout_constraintBaseline_toBaselineOf="@+id/applianceName_tv"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kwh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/powerExpense_tv"
            app:layout_constraintEnd_toEndOf="@+id/location_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>