<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/primary_text_dark_nodisable"
    android:layout_height="match_parent"
    tools:context=".ui.ACDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_CL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#E3DDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/temp_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="22 "
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fanspeed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="High"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/cooling_tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/cooling_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:text="Cooling"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.995"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_tv" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="37dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/fan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fanspeed_tv"
            app:layout_constraintTop_toBottomOf="@+id/temp_tv"
            android:contentDescription="@string/temperature" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_CL"
        app:layout_constraintVertical_bias="1.0">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/power_switch"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFFFFF"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/power"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/swing_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/swing"
            app:layout_constraintBaseline_toBaselineOf="@+id/mode_btn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/direction_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/direction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/power_switch"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/mode_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/power_switch" />

        <ImageButton
            android:id="@+id/plus_btn"
            android:layout_width="51dp"
            android:layout_height="54dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/plus1"
            android:tint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direction_btn"
            android:contentDescription="@string/temperature" />

        <ImageButton
            android:id="@+id/minus_btn"
            android:layout_width="51dp"
            android:layout_height="54dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:src="@drawable/remove"
            android:tint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direction_btn"
            android:contentDescription="@string/temperature" />

        <TextView
            android:id="@+id/tmp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.717" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>